# Chess

./: Cargo.toml  README.md
src/: bitboard.rs  constants.rs  engine.rs  eval_constants.rs  game_move.rs  graphical_interface.rs  magic_bitboard.rs  main.rs  move_generator.rs  transposition_table.rs  zobrist_table.rs
